--- a/js/settings.json
+++ b/js/settings.json
@@ -4,10 +4,12 @@
     "export"
   ],
   "tools": [
-    "pencil"
+    "pencil",
+    "heart"
   ],
   "filters": [
-    "invert"
+    "invert",
+    "pink"
   ],
   "options": [
     "randomDog",
