--- a/js/settings.json
+++ b/js/settings.json
@@ -5,14 +5,6 @@
   ],
   "tools": [
     "pencil",
-<<<<<<< HEAD
-    "oscCircles",
-    "sparkle"
-  ],
-  "filters": [
-    "invert",
-    "dark"
-=======
     "rainbow",
     "oscCircles",
     "gradientBrush",
@@ -24,12 +16,12 @@
     "invert",
     "opacity",
     "pink",
-    "zoom"
+    "zoom",
+    "dark"
   ],
   "filters": [
     "invert",
     "sepia"
->>>>>>> b2564db6728b17e8a2bbd32430be6c252dff9658
   ],
   "options": [
     "randomDog",
