fixed double "filter"

--- a/js/settings.json
+++ b/js/settings.json
@@ -16,10 +16,7 @@
     "invert",
     "opacity",
     "pink",
-    "zoom"
-  ],
-  "filters": [
-    "invert",
+    "zoom",
     "sepia"
   ],
   "options": [
