--- a/js/settings.json
+++ b/js/settings.json
@@ -10,7 +10,8 @@
     "gradientBrush",
     "eraser",
     "randAlpha",
-    "oscCircles"
+    "oscCircles",
+    "star"
   ],
   "filters": [
     "invert",
